Test with flake8 and django tests 8

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,19 @@
-name: Taski main workflow
+name: Main Taski workflow
 
 on:
   push:
     branches:
       - main
-    ...
 
 jobs:
-    # Запустить тестирование приложения
   tests:
     runs-on: ubuntu-latest
     steps:
-      - ...
-  # Собрать и отправить образ приложения на Docker Hub
+    # Собрать и отправить образ приложения на Docker Hub
   build_and_push_to_docker_hub:
     runs-on: ubuntu-latest
     needs: tests  # Не выполнять сразу, ждать, пока выполнится tests
     steps:
-      - ... 
-  
     # Блок services аналогичен docker-compose.yml
     services:
       postgres:
