--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,32 +1,39 @@
-# docker-compose.production.yml
 version: '3'
 
 volumes:
-  pg_data_production:
-  static_volume:
+  pg_data:
+  static:
 
-# Всё отличие — заменяем build на image и указываем, какой образ использовать
 services:
+  
   db:
-    image: postgres:13.10
-    env_file: .env
+   
+    image: postgres:13
+   
+    env_file: ./.env
+   
     volumes:
-      - pg_data_production:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data
+  
   backend:
     image: aseevatn/taski_backend
-    env_file: .env
+    env_file: ./.env
+    depends_on:
+      - db
+ 
     volumes:
-      - static_volume:/backend_static
+      - static:/backend_static
   frontend:
-    image: aseevatn/taski_frontend  # Качаем с Docker Hub
-    env_file: .env
+    env_file: ./.env
+    image: aseevatn/taski_frontend
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static_volume:/frontend_static
+      - static:/frontend_static
   gateway:
-    image: aseevatn/taski_gateway  # Качаем с Docker Hub
-    env_file: .env
+    image: aseevatn/taski_gateway
+    env_file: ./.env
+    
     volumes:
-      - static_volume:/staticfiles/
+      - static:/staticfiles/
     ports:
-      - 8000:80
+      - 8000:80 
