--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,40 @@
-# Файл docker-compose.yml
 
-# Версия docker-compose
 version: '3'
 
-# Перечень volume
 volumes:
   pg_data:
-
   static:
 
-# Перечень контейнеров
 services:
-  # Имя и описание первого контейнера; имя выбирает разработчик. 
-  # Это контейнер БД
+  
   db:
-    # Из какого образа запустить контейнер:
+   
     image: postgres:13
-    # Файл (или список файлов) с переменными окружения
-    env_file: .env
-    # Какой volume подключить для этого контейнера
+   
+    env_file: ./.env
+   
     volumes:
       - pg_data:/var/lib/postgresql/data
-  # Имя и описание контейнера с бэкендом
+  
   backend:
-    # Из какого Dockerfile собирать образ для этого контейнера:
+   
     build: ./backend/
-    env_file: .env
- # Тут подключаем volume к backend
+    env_file: ./.env
+    depends_on:
+      - db
+ 
     volumes:
       - static:/backend_static
   frontend:
-    env_file: .env
+    env_file: ./.env
     build: ./frontend/
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static:/frontend_static
   gateway:
     build: ./gateway/
-    env_file: .env
-    # А тут подключаем volume со статикой к gateway
+    env_file: ./.env
+    
     volumes:
       - static:/staticfiles/
     ports:
